Create JlinkTask for better usage (#383)